# misc

./: README.md
fastapi-htmx/: main.py  pyproject.toml
fastapi-htmx/templates/: index.html
fastapi-htmx/templates/partials/: table.html
msia-fastfood/: README.md  dev.ipynb
msia-fastfood/utils/: scraper.py
pydantic-dynamic-docstrings/: pyproject.toml
svelte-unovis/: package.json  pnpm-lock.yaml
svelte-unovis/src/routes/: +layout.svelte  +page.svelte
