[tool.poetry]
name = "fastapi-htmx"
version = "0.1.0"
description = ""
authors = ["hewliyang <hewliyang@u.nus.edu>"]
readme = "README.md"
packages = [{include = "fastapi_htmx"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.102.0"}
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
